# rcp

./: .gitignore  .gitmodules  BUILD.md  CHANGELOG.md  CLI_MIGRATION_SUMMARY.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPRECATION_NOTICE.md  DIRECTORY_STRUCTURE.md  DOC_UPDATE_INSTRUCTIONS.md  MIGRATION_COMPLETION_PLAN.md  MIGRATION_PLAN.md  MIGRATION_STATUS.md  QUICKSTART.md  RCP_CLI_REMOVAL_PROCESS.md  README.md  RELEASE.md  SECURITY.md  build.rs  config.toml  native_auth_example.toml  port_command_module.sh  rcpd_config.toml  remove_rcp_cli.sh  service.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: README.md  changelog-optimized.yml  changelog.yml  ci.yml  release.yml
build-utils/: native_deps.rs
docs/: architecture.md  build-scripts.md  build_scripts.md  development-guidelines.md  development-workflow.md  documentation-refactoring.md  documentation-update-summary.md  flutter_client.md  implementation_guide.md  integration-changes.md  integration-progress.md  management_api.md  management_dashboard.md  native-authentication-guide.md  native-authentication.md  project-outline.md  project_outline.md  protocol-specification.md  rcp-admin.md  rcp-api.md  rcp-cli.md  rcp-desk.md  rcp-flutter-client.md  rcp-service.md  rcpc.md  rcpd-installation.md  rcpd.md  rcpp.md  roadmap-legacy.md  server-service-integration-details.md  server-service-integration.md
docs/archive/: documentation-update-summary.md  integration-progress.md  rcp-api.md  rcp-cli.md  rcp-service.md  roadmap-legacy.md  server-service-integration-details.md  server-service-integration.md
examples/: Cargo.toml  build.rs  simple_client.rs
examples/rust-rcp-client/: Cargo.toml
examples/src/: app_launch_example.rs  client_example.rs  format_duration_example.rs  simple_client.rs
rcp-admin/: package-lock.json  package.json  tsconfig.json  vite.config.js
rcp-admin/.svelte-kit/: ambient.d.ts
rcp-admin/src/: app.html  global.d.ts
rcp-admin/src-tauri/: Cargo.toml  tauri.conf.json
rcp-admin/src-tauri/src/: commands.rs  lib.rs  main.rs
rcp-api/: Cargo.toml  README.md  run_tests.sh
rcp-api/migrations/: 20250511000000_initial.sql
rcp-api/src/: api.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  routes.rs  service.rs
rcp-api/src/db/: mod.rs
rcp-api/src/handlers/: admin.rs  apps.rs  auth.rs  health.rs  mod.rs  servers.rs  sessions.rs  system.rs  users.rs
rcp-api/tests/: api_tests.rs  config_tests.rs  db_tests.rs  error_tests.rs  lib_tests.rs  service_tests.rs
rcp-api/tests/tmp/: api_tests.rs  db_tests.rs  error_tests.rs  service_tests.rs
rcp-cli/: Cargo.toml
rcp-cli/src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  service.rs  utils.rs
rcp-cli/src/commands/: app.rs  auth.rs  batch.rs  completions.rs  config.rs  diag.rs  logs.rs  mod.rs  server.rs  service.rs  session.rs  shell.rs  user.rs
rcp-cli/tests/: cli_tests.rs  command_tests.rs  config_tests.rs  error_tests.rs  service_tests.rs  utils_tests.rs
rcp-client/: Cargo.toml
rcp-client/src/: client.rs  connection_string.rs  error.rs  lib.rs  main.rs  service.rs
rcp-client/tests/: client_tests.rs  connection_string_tests.rs  error_tests.rs  service_tests.rs
rcp-core/: Cargo.toml  README.md
rcp-core/src/: auth.rs  command.rs  error.rs  frame.rs  header.rs  lib.rs  protocol.rs  utils.rs
rcp-core/tests/: README.md  auth_test.rs  auth_tests.rs  command_test.rs  command_tests.rs  frame_test.rs  frame_tests.rs  protocol_test.rs  protocol_tests.rs
rcp-desk/: package-lock.json  package.json  svelte.config.js  tailwind.config.js  tsconfig.json  vite.config.js
rcp-desk/src/: app.css  app.d.ts  app.html
rcp-desk/src-tauri/: Cargo.toml  tauri.conf.json
rcp-desk/src-tauri/capabilities/: default.json
rcp-desk/src-tauri/src/: commands.rs  lib.rs  main.rs
rcp-management-api/: .env  .env.example  Cargo.toml
rcp-management-api/src/: app.rs  auth.rs  config.rs  db.rs  error.rs  lib.rs  main.rs  middleware.rs  models.rs  routes.rs  utils.rs
rcp-management-api/src/handlers/: auth.rs  config.rs  logs.rs  mod.rs  server.rs  servers.rs  sessions.rs  users.rs
rcp-management-ui/: build.rs  package.json  svelte.config.js  tsconfig.json  vite.config.js
rcp-sdl-client/: Cargo.toml  build.rs
rcp-sdl-client/src/: client.rs  lib.rs  main.rs  sdl_egui.rs  ui.rs
rcp-server/: Cargo.toml
rcp-server/src/: config.rs  error.rs  lib.rs  main.rs  server.rs  service.rs  session.rs  user.rs
rcp-server/tests/: config_tests.rs  server_tests.rs  session_tests.rs
rcp-service/: Cargo.toml  README.md
rcp-service/src/: config.rs  daemon.rs  error.rs  instance.rs  lib.rs  lifecycle.rs  main.rs  manager.rs  platform.rs  service.rs  user.rs
rcp-service/src/api/: config.rs  handlers.rs  server.rs
rcp-service/src/platform/: mod.rs  unix.rs  windows.rs
rcp-service/src/server/: server.rs  user.rs
rcp-service/tests/: config_test.rs  config_tests.rs  lifecycle_tests.rs  manager_test.rs  manager_tests.rs  manager_tests2.rs  service_tests.rs
rcp-ws-bridge/: Cargo.toml
rcp-ws-bridge/src/: error.rs  lib.rs  main.rs
rcp-ws-bridge/tests/: bridge_config_tests.rs  error_tests.rs  ws_client_tests.rs  ws_message_tests.rs
rcpadmin/: .gitignore  README.md
rcpadmin/backend/: .env  Cargo.toml  rcpadmin.db
rcpadmin/backend/migrations/: 20250525000001_initial_schema.sql
rcpadmin/backend/src/: auth.rs  config.rs  db.rs  error.rs  main.rs  models.rs  websocket.rs
rcpadmin/backend/src/api/: applications.rs  auth.rs  mod.rs  server.rs  sessions.rs  system.rs  users.rs
rcpadmin/backend/src/services/: application.rs  auth.rs  metrics.rs  mod.rs  rcpdaemon.rs  session.rs  user.rs
rcpadmin/web/: package.json
rcpc/: Cargo.toml
rcpc/src/: client.rs  error.rs  lib.rs  (+2 more)
rcpd/: Cargo.toml  INSTALL.md  README.md
rcpp/: Cargo.toml  README.md
rcpp/src/: auth.rs  command.rs  frame.rs  lib.rs  utils.rs
rcpp/tests/: README.md  auth_test.rs  auth_tests.rs  command_test.rs  command_tests.rs  frame_test.rs  frame_tests.rs  protocol_test.rs  protocol_tests.rs
scripts/: README.md  build_and_run.ps1  test_native_auth.sh
(+109 files in other folders)
