[workspace]
members = [
    "rcp-core",
    "rcp-server",
    "rcp-client",
    "rcp-ws-bridge",
    "examples",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Akash Shah <akash@devstroop.com>", "Devstroop Technologies <info@devstroop.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-rcp/rcp"
homepage = "https://github.com/open-rcp/rcp"

[workspace.dependencies]
tokio = { version = "1.28", features = ["full"] }
bytes = "1.4"
thiserror = "1.0"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.10"
rustls = "0.21"
webpki-roots = "0.25"
uuid = { version = "1.3", features = ["v4", "serde"] }
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
bincode = "1.3"
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"
byteorder = "1.4"
image = { version = "0.24", features = ["jpeg", "png"] }
rcp-core = { path = "rcp-core" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true