[workspace]
members = [
    "rcp-core",
    "rcp-server",
    "rcp-client",
    "rcp-ws-bridge",
    "rcp-management-api",
    "examples"
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Akash Shah <akash@devstroop.com>", "Devstroop Technologies <info@devstroop.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/open-rcp/rcp"
homepage = "https://github.com/open-rcp/rcp"

[workspace.dependencies]
tokio = { version = "1.44.2", features = ["full"] }
bytes = "1.10.1"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_bytes = "0.11.17"
log = "0.4.27"
env_logger = "0.11.8"
rustls = "0.23.26"
webpki-roots = "0.26.10"
uuid = { version = "1.16.0", features = ["v4", "serde"] }
futures-util = "0.3.31"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
bincode = "1.3"
sha2 = "0.10.9"
aes-gcm = "0.10.3"
rand = "0.9.1"
byteorder = "1.5.0"
image = { version = "0.25.6", features = ["jpeg", "png"] }
rcp-core = { path = "rcp-core" }

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
strip = true