[package]
name = "rcp-examples"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "format_duration_example"
path = "src/format_duration_example.rs"

[[bin]]
name = "simple_client"
path = "src/simple_client.rs"

[dependencies]
rcpd = { path = "../rcpd", features = ["cli"] }
rcp-client = { path = "../rcp-client" }
rcp-core = { path = "../rcp-core" }
tokio = { version = "1", features = ["full"] }
