[package]
name = "rcp-examples"
version = "0.1.0"
edition = "2021"

[features]
default = []
cli = ["rcpdaemon/cli"]

[[bin]]
name = "format_duration_example"
path = "src/format_duration_example.rs"

[[bin]]
name = "simple_client"
path = "src/simple_client.rs"

[dependencies]
rcpdaemon = { path = "../rcpdaemon", features = ["cli"] }
rcpcli = { path = "../rcpcli" }
rcpcore = { path = "../rcpcore" }
tokio = { version = "1", features = ["full"] }
