[package]
name = "rcp-api"
version = "0.1.0"
edition = "2021"
description = "API server for the Rust/Remote Control Protocol (RCP)"
authors = ["Akash Shah <itsalfredakku@gmail.com>"]

[dependencies]
rcp-core = { path = "../rcp-core" }
tokio = { version = "1.28", features = ["full"] }
axum = "0.6"
tower = "0.4"
tower-http = { version = "0.4", features = ["trace", "cors", "compression-full", "auth"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = "0.13"
thiserror = "1.0"
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.3", features = ["v4", "serde"] }
jsonwebtoken = "8.3"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.3", features = ["derive"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono", "uuid", "offline"] }
futures = "0.3"
toml = "0.8"
num_cpus = "1.16"

[dev-dependencies]
wiremock = "0.5"
tempfile = "3.8"
futures-util = "0.3"
tokio-test = "0.4"
hyper = "1.6.0"

[lib]
name = "rcp_api"
path = "src/lib.rs"

[[bin]]
name = "rcp-api"
path = "src/main.rs"
