[package]
name = "rcp-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Command line interface for RCP (Rust/Remote Control Protocol) server administration"

[lib]
name = "rcp_cli"
path = "src/lib.rs"

[dependencies]
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
clap_complete = "4.5.1"
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8.12"
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1.88"
dirs = "5.0.1"
colored = "2.1.0"
chrono = "0.4.35"
humantime = "2.1.0"

[[bin]]
name = "rcp-cli"
path = "src/main.rs"