[package]
name = "rcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for the Rust Control Protocol (RCP)"

[dependencies]
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
async-trait = "0.1"