[package]
name = "rcp-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Client library for the Rust Control Protocol (RCP)"

# Explicitly define both lib and bin targets
[[bin]]
name = "rcp-client"
path = "src/main.rs"

[lib]
name = "rcp_client"
path = "src/lib.rs"

[dependencies]
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
rustls = { workspace = true }
webpki-roots = { workspace = true }
async-trait = "0.1"
tokio-tungstenite = "0.20"