[package]
name = "rcp-management-api"                         
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies from workspace
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rcp-core = { workspace = true }

# Additional dependencies for the management API
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["typed-routing"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "auth"] }
hyper = "1.2"
time = { version = "0.3", features = ["formatting", "serde"] }
jsonwebtoken = "9.2"
# SurrealDB with both memory and RocksDB engines (updated to version 2.3.0)
surrealdb = { version = "2.3.0", features = ["kv-mem", "kv-rocksdb"] }
dotenv = "0.15"
bcrypt = "0.15"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
toml = "0.8.6"
thiserror = "1.0.56"
sqlx = { version = "0.7.3", features = ["runtime-tokio", "postgres", "sqlite", "json", "uuid", "time", "macros"] }
actix-web = "4.4.0"
actix-cors = "0.6.4"
actix-files = "0.6.2"