[package]
name = "rcp-management-api"                         
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Core dependencies from workspace
tokio = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rcp-core = { workspace = true }

# Additional dependencies for the management API
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-routing"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "trace", "auth"] }
hyper = "1.6.0"
time = { version = "0.3.41", features = ["formatting", "serde"] }
jsonwebtoken = "9.3.1"
# SurrealDB with both memory and RocksDB engines (updated to version 2.3.0)
surrealdb = { version = "2.3.0", features = ["kv-mem", "kv-rocksdb"] }
dotenv = "0.15.0"
bcrypt = "0.17.0"
chrono = { version = "0.4.41", features = ["serde"] }
num_cpus = "1.16.0"
toml = "0.8.22"
thiserror = "2.0.12"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "postgres", "sqlite", "json", "uuid", "time", "macros"] }
actix-web = "4.10.2"
actix-cors = "0.7.1"
actix-files = "0.6.6"