[package]
name = "rcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Server implementation for the Rust Control Protocol (RCP)"

[dependencies]
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
config = "0.13"
serde = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1"
rustls = { workspace = true }
webpki-roots = { workspace = true }