[package]
name = "rcp-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Server implementation for the Rust/Remote Control Protocol (RCP)"

[features]
default = []

[dependencies]
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.5.37", features = ["derive"] }
config = "0.15.11"
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
futures-util = { workspace = true }
async-trait = "0.1.88"
rustls = { workspace = true }
webpki-roots = { workspace = true }
argon2 = "0.5.6"
chrono = { version = "0.4.41", features = ["serde"] }