[package]
name = "rcp-ws-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebSocket bridge for RCP (Rust Control Protocol)"

[dependencies]
rcp-core = { path = "../rcp-core" }
rcp-client = { path = "../rcp-client" }
tokio = { workspace = true }
tokio-tungstenite = "0.20"
futures-util.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true