[package]
name = "rcp-ws-bridge"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebSocket bridge for RCP (Rust Control Protocol)"

# Explicitly define both lib and bin targets
[[bin]]
name = "rcp-ws-bridge"
path = "src/main.rs"

[lib]
name = "rcp_ws_bridge"
path = "src/lib.rs"

[dependencies]
rcp-core = { path = "../rcp-core" }
rcp-client = { path = "../rcp-client" }
tokio = { workspace = true }
tokio-tungstenite = "0.26.2"
futures-util.workspace = true
log.workspace = true
env_logger.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
anyhow.workspace = true
thiserror.workspace = true
clap = { version = "4.5.37", features = ["derive"] }