[package]
name = "rust-rcpc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
rcpc = { path = "../../rcpc" }
rcpp = { path = "../../rcpp" }
tokio = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
clap = { version = "4.3", features = ["derive"] }
futures-util = { workspace = true }