[package]
name = "rcp-admin"
version = "0.1.0"
description = "Administrative interface for RCP server management"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "rcp_admin_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-opener = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
rcp-server = { path = "../../rcp-server" }  # Use server components directly
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
config = "0.15.11"  # For config file management
uuid = { workspace = true }
directories = "5.0.1"  # For finding config directories

