[package]
name = "rcp-desk"
version = "0.1.0"
description = "End-user client for accessing RCP virtual applications"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-dialog = "2.0.0-beta"
tauri-plugin-shell = "2.0.0-beta"
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.0.0"
rcp-client = { path = "../../rcp-client" }
rcp-core = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
directories = "5.0.1"
# webrtc = "0.6.0"  # For screen streaming
image = "0.24.7"  # For image processing
